// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<Controls />\` renders correctly when there are multiple existing similarities. 1`] = `
<div>
  <button>
    Add Similarity
  </button>
  <div
    style="display: flex;"
  >
    <p>
      test/a
    </p>
    <button>
      Remove
    </button>
    <label>
      Angle
      <input
        max="6.2832"
        min="-6.2832"
        step="0.0001"
        type="range"
        value="0.1385"
      />
    </label>
    <label>
      Scale
      <input
        max="2"
        min="0"
        step="0.05"
        type="range"
        value="0.7791"
      />
    </label>
    <label>
      Translation
      <input
        max="1.5"
        min="0"
        step="0.05"
        type="range"
        value="0.4663"
      />
    </label>
    <label>
      Depth
      <input
        max="8"
        min="0"
        step="1"
        type="range"
        value="3"
      />
    </label>
  </div>
  <div
    style="display: flex;"
  >
    <p>
      test/b
    </p>
    <button>
      Remove
    </button>
    <label>
      Angle
      <input
        max="6.2832"
        min="-6.2832"
        step="0.0001"
        type="range"
        value="0.4692"
      />
    </label>
    <label>
      Scale
      <input
        max="2"
        min="0"
        step="0.05"
        type="range"
        value="0.7202"
      />
    </label>
    <label>
      Translation
      <input
        max="1.5"
        min="0"
        step="0.05"
        type="range"
        value="0.7432"
      />
    </label>
    <label>
      Depth
      <input
        max="8"
        min="0"
        step="1"
        type="range"
        value="7"
      />
    </label>
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there are no existing similarities 1`] = `
<div>
  <button>
    Add Similarity
  </button>
</div>
`;

exports[`\`<Controls />\` renders correctly when there is one existing similarity 1`] = `
<div>
  <button>
    Add Similarity
  </button>
  <div
    style="display: flex;"
  >
    <p>
      test/subject
    </p>
    <button>
      Remove
    </button>
    <label>
      Angle
      <input
        max="6.2832"
        min="-6.2832"
        step="0.0001"
        type="range"
        value="0.1385"
      />
    </label>
    <label>
      Scale
      <input
        max="2"
        min="0"
        step="0.05"
        type="range"
        value="0.7791"
      />
    </label>
    <label>
      Translation
      <input
        max="1.5"
        min="0"
        step="0.05"
        type="range"
        value="0.4663"
      />
    </label>
    <label>
      Depth
      <input
        max="8"
        min="0"
        step="1"
        type="range"
        value="3"
      />
    </label>
  </div>
</div>
`;
